# reverse-proxy

./: .docker-compose.yml.swp  .gitignore  README.md  default.conf  docker-compose.yml  docker_stats.csv  docker_stats_test_numpy_2000_10m.csv  main.py  pyproject.toml
conf/cache/: default.conf
conf/nginx/: nginx.conf
docker/fastapi/: Dockerfile
nginx-sites-enabled/: lb  mygoogle  mynaver
note/: Plot.ipynb  Untitled.ipynb  docker_stats.ipynb  docker_stats_test_numpy_1000_7m_10^4.csv  docker_stats_test_numpy_1000_7m_10^5.csv  docker_stats_test_numpy_700_7m_10^4.csv  docker_stats_test_numpy_700_7m_10^5.csv  docker_stats_test_python_1000_7m_10^4.csv  docker_stats_test_python_1000_7m_10^5.csv  docker_stats_test_python_700_7m_10^4.csv  docker_stats_test_python_700_7m_10^5.csv  newfile.csv  nginx_status.ipynb  numpy-basic.ipynb  numpy_1200_docker_stats.csv  output_test_numpy_1000_7m_10^4.csv  output_test_numpy_1000_7m_10^5.csv  output_test_numpy_700_7m_10^4.csv  output_test_numpy_700_7m_10^5.csv  output_test_python_1000_7m_10^4.csv  output_test_python_1000_7m_10^5.csv  output_test_python_700_7m_10^4.csv  output_test_python_700_7m_10^5.csv  plot_nGrinder_test.ipynb  subplots.ipynb
note/not use/: docker_stats.csv  docker_stats_test_numpy_2000_10m_cache.csv  docker_stats_test_numpy_500_6m.csv  docker_stats_test_numpy_500_6m_cache.csv  docker_stats_test_python_2000_10m.csv  docker_stats_test_python_2000_10m_cache.csv  docker_stats_test_python_500_6m.csv  docker_stats_test_python_500_6m_cache.csv  numpy_1200_output.csv  (+10 more)
pyweb3/: .docker-compose.yml.swp  index.html
(+2 files in other folders)
